<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#1a202c"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/title_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ast_image"
                android:paddingBottom="15dp"
                android:src="@drawable/title_image1" />

            <Button
                android:id="@+id/fc_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/button_home_flashcards"
                android:text="@string/fc_button"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/quiz_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/button_home_quiz"
                android:text="@string/quiz_button"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/options_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/button_home_options"
                android:text="@string/options_button"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>